--- a/style.css
+++ b/style.css
@@ -9,26 +9,27 @@ body {
     font-size: 13px;
 }
 
+.sub-text__gray-color {
+    color: #ADB5BD;
+}
+
 .divs-facilidades {
     width: 325px;
 }
 
-.btn__enviar,
-.btn__product__detail {
+.btn__purple{
     background-color: #9353FF;
     border-color: #9353FF;
     color: white;
 }
 
-.btn__enviar:hover,
-.btn__product__detail:hover {
+.btn__purple:hover {
     background-color: white;
     border-color: #9353FF;
     color: #9353FF;
-
 }
 
-.product-detail__check,
+.icon__check,
 .facilidade-icon {
     color: #DAFF01;
     font-size: 32px;
@@ -36,16 +37,6 @@ body {
 
 .product-detail__close {
     color: #6C757D;
-}
-
-.hr-thick {
-    height: 1px;
-    background-color: black;
-    border-color: black;
-}
-
-.sub-text__gray-color {
-    color: #ADB5BD;
 }
 
 .input-radio-color:checked,
@@ -57,4 +48,4 @@ body {
 .modal-size {
     width: 60em;
     height: 50em;
-  }
+}
